Fix spacing in non-chrome browsers

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,12 +53,14 @@ h1 {
 h2 {
 	font-size:18px;
 	-webkit-margin-after:5px;
+	margin-bottom: 5px;
 }
 
 h3 {
 	font-size:16px;
 	-webkit-margin-before:0em;
 	-webkit-margin-after:0em;
+	margin: 0 0px;
 	padding: 4px;
 }
 
